# ece324-TANGO

./: .gitignore  AGENTS.md  ASCE.md  CLAUDE.md  DATA.md  LICENSE  Makefile  PIRA.ipynb  PIRA.md  README.md  TANGO-presentation.html  TANGO-proposal.tex  environment.yml  pixi.toml  pyproject.toml  requirements.txt  rough draft.txt
.planning/: HANDOFF-PHASE5.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  (+4 more)
ece324_tango/: __init__.py  config.py  dataset.py  error_reporting.py  features.py  plots.py
ece324_tango-model/: dataset.py
ece324_tango_model/: __init__.py  features.py  plots.py
models/: README.md  asce_mappo.pt  asce_mappo_curriculum - Copy.pt  asce_mappo_curriculum.pt  asce_mappo_curriculum_best - Copy.pt  asce_mappo_curriculum_best.pt  asce_mappo_curriculum_best_am_peak.pt  asce_mappo_curriculum_best_demand_surge.pt  asce_mappo_curriculum_best_midday_multimodal.pt  asce_mappo_curriculum_best_pm_peak.pt  asce_mappo_curriculum_train_state.json  asce_mappo_objective_e10_s17.pt  asce_mappo_toronto_random.pt  speed_test_4w.pt  test_parallel_1w.pt  test_parallel_2w.pt
notebooks/: 01_inspect_network.ipynb  02_inspect_tls.ipynb  03_explore_tmc.ipynb
scripts/: 00_smoke_test.py  02_parse_tmc.py  03_map_intersections.py  04_generate_demand.py  05_calibrate.py  asce_slides_replacement.html  compute_significance.py  eval_matrix.sh  eval_nema.py  gate_fraction_timeseries.py  generate_asce_dataset.py  generate_baseline_dataset.py  generate_curriculum.py  generate_presentation_figures.py  generate_report_figures.py
tests/: test_action_gate_mappo.py  test_backend_availability.py  test_backend_eval_seeding.py  test_backend_integration_slow.py  test_backend_selection.py  test_baseline_max_pressure.py  test_benchmarl_adapter.py  test_cli_obs_norm_defaults.py  test_curriculum_config.py  test_data.py  test_device_resolution.py  test_kpi.py  test_local_backend_bootstrap.py  test_local_backend_eval_guard.py  test_local_eval_fallback_observation_alignment.py  test_local_eval_fatal_kpi_guard.py  test_local_eval_fixed_time_reset.py  test_local_eval_objective_scoring.py  test_mappo_core.py  test_obs_norm.py  test_obs_norm_parity.py  test_observation_padding.py  test_runtime_step_flags.py  test_traffic_metrics.py  test_training_tui.py  test_xuance_compat_patch.py  test_xuance_config.py  test_xuance_registration.py
(+176 files in other folders)
