[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ece324_tango"
version = "0.0.1"
description = "Traffic Adaptive Network Guidance \u0026 Optimization - real-time adaptive signal control and cenario planning module that evaluates how nearby projects (construction, lane closures, new public transit lines) alter demand/capacity to recommend signal timing/phasing updates"
authors = [
  { name = "Aryan Shivastava, Kotaro Murakami, Yash Nishit Kapadia" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["ece324_tango"]
force_sort_within_sections = true

[tool.ruff]
line-length = 120
extend-exclude = [
    "ece324_tango/sumo_rl",  # vendored third-party (SUMO-RL, MIT) — upstream style preserved
    "notebooks",             # exploratory notebooks; not part of the reproducible pipeline
    ".pixi",
    "_archive",
]

[tool.ruff.lint.per-file-ignores]
"ece324_tango/__init__.py" = ["F401"]
"**/__init__.py" = ["F401"]

[tool.pytest.ini_options]
markers = [
    "slow: long-running tests",
    "integration: cross-module or CLI integration tests",
]

